@startuml
class Actor{
    -name : String
    -surname : String
    -country : String
    -age : Integer
    -moviesActed : List<Movie>
}
class Director{
    -name : String
    -surname : String
    -country : String
    -age : Integer
    -moviesDirected : List<Movie>
}

class Movie {
    -title : String
    -year : Integer
    -language : String
    -duration : Integer
    -filmGenre : FilmGenre
    -director : Director
    -cast : List<Actor>
}

enum FilmGenre {
    ACTION
    COMEDY
    CRIME
    FANTASY
    HORROR
    THRILLER
}

Movie "*" -- "1..*" Actor
Movie "*" -- "1" Director
Movie "*" --> "1" FilmGenre

@enduml